Fix traits spacing

--- a/css/styles.css
+++ b/css/styles.css
@@ -1132,6 +1132,11 @@ header {
   margin-top: 3rem;
   margin-bottom: 2rem;
 }
+@media (min-width: 1360px) {
+  .trait {
+    max-width: 21.875rem;
+  }
+}
 @media (min-width: 768px) and (max-width: 1359px) {
   .trait {
     flex-direction: row;
@@ -1142,8 +1147,8 @@ header {
   }
   .trait__header {
     text-align: left;
-    margin-top: 0;
-    margin-bottom: 1rem;
+    padding-top: 0;
+    padding-bottom: 1rem;
   }
   .trait__inner {
     width: 27.4375rem;
