--- a/sass/pages/home/m-trait.scss
+++ b/sass/pages/home/m-trait.scss
@@ -8,6 +8,9 @@
         margin-top:    rem(48px);
         margin-bottom: rem(32px);
     }
+    @include mq(large) {
+        max-width: rem(350px);
+    }
     @media (min-width: 768px) and (max-width: 1359px) {
         flex-direction: row;
         justify-content: space-between;
@@ -16,8 +19,8 @@
         }
         &__header {
             text-align: left;
-            margin-top:    0;
-            margin-bottom: rem(16px);
+            padding-top:    0;
+            padding-bottom: rem(16px);
         }
         &__inner {
             width: rem(439px);
